--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Generative Art</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.min.js"></script>
-    <script src="sketch.js" defer></script>
+    <script src="uno.js" defer></script>
   </head>
   <body>
-    <button id="saveBtn">🎨 Save Image</button>
+    <button id="saveBtn">🎨 Salva</button>
   </body>
 </html>
