--- a/index.html
+++ b/index.html
@@ -4,11 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Generative Art</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.min.js"></script>
-    <script src="uno.js" defer></script>
+    <style type="text/css">
+      body {
+          margin: 0;
+          padding: 0;
+          overflow: hidden;
+          font-family: sans-serif;
+      }
+
+      /*
+      canvas {
+        width: 100%;
+        height: 100%;
+        display: block;
+      }*/
+      
+      #saveBtn {
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 6px 8px;
+        font-size: 16px;
+        background-color: white;
+        border: 0;
+        border-radius: 4px;
+        cursor: pointer;
+        z-index: 10;
+      }
+    </style>
   </head>
   <body>
-    <button id="saveBtn">🎨 Salva</button>
+    <button id="saveBtn">🎨 💾</button>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.min.js"></script>
+    <script src="uno.js" defer></script>
   </body>
 </html>
