--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       
       // Dynamically load the selected script
       const scriptElement = document.createElement('script');
-      scriptElement.src = 'due.js';
+      scriptElement.src = selectedScript;
       scriptElement.defer = true;
       document.body.appendChild(scriptElement);
       
