--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!--<script src="due.js" defer></script>-->
     <script>
       // Randomly select which script to load
-      const scripts = ['uno.js', 'due.js'];
+      const scripts = ['tre.js'];
       const selectedScript = scripts[Math.floor(Math.random() * scripts.length)];
       
       // Dynamically load the selected script
