--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
       });
       
       // Randomly select which script to load
-      const scripts = ['uno.js', 'due.js', 'tre.js', 'quattro.js', 'quattro-bis.js', 'cinque.js'];
+      const scripts = ['quattro.js', 'quattro-bis.js'];
       const selectedScript = scripts[Math.floor(Math.random() * scripts.length)];
       
       // Dynamically load the selected script
